fixing image links

--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
                 <h2>For more information and my resume, see my Linkedin!</h2>
                 <a 
                 href="https://www.linkedin.com/in/kevinvu02?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BwsHtkAeURwSgWcIn2Ul9Mw%3D%3D" 
-                target="_blank"><img src="/img/logo-linkedin.png" alt="linkedin-logo" width = 100px></a> 
+                target="_blank"><img src="img/logo-linkedin.png" alt="linkedin-logo" width = 100px></a> 
             </div>     
         </div>
     </section>
