--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </div>
             
         <figure id="photo">
-            <img src="/img/me-photo.JPG" alt="photo of Kevin Vu" width="150px";>
+            <img src="img/me-photo.JPG" alt="photo of Kevin Vu" width="150px";>
             <figcaption>Me</figcaption>
     </section>
 
