--- a/skills.html
+++ b/skills.html
@@ -35,7 +35,7 @@
             <div id="skill-boxes">
                 <div class="box">
                     <div class="picture-box">
-                        <img src="/img/icon-p-lang.png" alt="">
+                        <img src="img/icon-p-lang.png" alt="">
                     </div>
                     <div class="textbox" id="p-lang">
                         <div class="topic">
@@ -52,7 +52,7 @@
                 </div>
                 <div class="box" id="lang">
                     <div class="picture-box">
-                        <img src="/img/icon-lang.png" alt="">
+                        <img src="img/icon-lang.png" alt="">
                     </div>
                     <div class="textbox">
                         <div class="topic">
@@ -68,7 +68,7 @@
                 </div>
                 <div class="box" id="Software">
                     <div class="picture-box">
-                        <img src="/img/icon-software.png" alt="">
+                        <img src="img/icon-software.png" alt="">
                     </div>
                     <div class="textbox">
                         <div class="topic">
