--- a/education.html
+++ b/education.html
@@ -32,7 +32,7 @@
         <div class="container">
             <div class="strip">
                 <div class="picture-box">
-                    <img src="/img/ucf-logo.png" alt="University of Central Florida Logo" width="150px">
+                    <img src="img/ucf-logo.png" alt="University of Central Florida Logo" width="150px">
                 </div>
                 <div class="textbox">
                     <div class="topic">
@@ -51,7 +51,7 @@
             </div>
             <div class="strip">
                 <div class="picture-box">
-                    <img src="/img/uhs-logo.png" alt="University High School Logo" width="150px">
+                    <img src="img/uhs-logo.png" alt="University High School Logo" width="150px">
                 </div>
                 <div class="textbox">
                     <div class="topic">
