adding repo link

--- a/contact.html
+++ b/contact.html
@@ -44,6 +44,7 @@
     <footer>
         <div class="container">
             <p>12/25/2022 Kevin Vu</p>
+            <a href="https://github.com/KevinV0212/Bio-website.git" target="_blank">Visit This Project on GitHub</a> 
         </div>
     </footer>
     <div class="container">
