--- a/skills.html
+++ b/skills.html
@@ -79,6 +79,7 @@
                             <li>Github</li>
                             <li>Bootstrap</li>
                             <li>Liveserver</li>
+                            <li>JQuery</li>
                         </ul>
                     </div>
                 </div>
@@ -89,6 +90,7 @@
     <footer>
         <div class="container">
             <p>12/25/2022 Kevin Vu</p>
+            <a href="https://github.com/KevinV0212/Bio-website.git" target="_blank">Visit This Project on GitHub</a> 
         </div>
     </footer>
     <div class="container">
